fix(css): fix scrollbar issue on windows

--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -1,3 +1,7 @@
+html {
+  overflow-y: unset !important;
+}
+
 body {
   font-size: 1rem;
   font-family: $font-family-sans-serif;
